UI: Reduce padding on <code> blocks to prevent overlapping.

--- a/html/assets/red.css
+++ b/html/assets/red.css
@@ -104,7 +104,7 @@ h4 {font-family: "Quattrocento Sans", "Helvetica", "Arial", sans-serif;}
 
 	code {
 		background: rgba(0,0,0,0.2);
-		padding: 0.3em 0.5em;
+		padding: 0.15em 0.5em;
 		border-radius: 0.3em;
 		border: none;
 		color: white;
@@ -171,6 +171,7 @@ h4 {font-family: "Quattrocento Sans", "Helvetica", "Arial", sans-serif;}
 	.label a, .label a:visited {text-decoration: none;}
 	.label-default {background: rgba(0,0,0,0.2);}
 
+	.light .btn em {font-weight: normal;}
 	.light .btn:hover {text-decoration: none}
 	.light .label {color: inherit; background: rgba(0,0,0,0.05);
 		box-shadow: 0 0 1px rgba(255,255,255,0.1)
